tests/baselines/reference/initializerReferencingConstructorLocals.errors.txt
==== tests/cases/compiler/initializerReferencingConstructorLocals.ts (12 errors) ====
    // Initializer expressions for instance member variables are evaluated in the scope of the class constructor body but are not permitted to reference parameters or local variables of the constructor. 
    
    class C {
        a = z; // error
            ~
!!! error TS2095: Could not find symbol 'z'.
        b: typeof z; // error
                  ~
!!! error TS2095: Could not find symbol 'z'.
        c = this.z; // error
                 ~
!!! error TS2094: The property 'z' does not exist on value of type 'C'.
        d: typeof this.z; // error
                  ~~~~
!!! error TS1006: Identifier expected; 'this' is a keyword.
                       ~
!!! error TS2094: The property 'z' does not exist on value of type 'C'.
        constructor(x) {
            z = 1;
            ~
!!! error TS2095: Could not find symbol 'z'.
        }
    }
    
    class D<T> {
        a = z; // error
            ~
!!! error TS2095: Could not find symbol 'z'.
        b: typeof z; // error
                  ~
!!! error TS2095: Could not find symbol 'z'.
        c = this.z; // error
                 ~
!!! error TS2094: The property 'z' does not exist on value of type 'D<T>'.
        d: typeof this.z; // error
                  ~~~~
!!! error TS1006: Identifier expected; 'this' is a keyword.
                       ~
!!! error TS2094: The property 'z' does not exist on value of type 'D<T>'.
        constructor(x: T) {
            z = 1;
            ~
!!! error TS2095: Could not find symbol 'z'.
        }
    }